--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@helppie/react",
   "version": "0.1.1",
-  "private": true,
+  "private": false,
   "main": "./lib/HelppieWidget.js",
   "license": "MIT",
   "devDependencies": {
